--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,15 @@
-apply plugin: 'idea'
+plugins {
+    id 'com.gradle.build-scan' version '1.2'
+}
+
+buildScan {
+    licenseAgreementUrl = 'https://gradle.com/terms-of-service'
+    licenseAgree = 'yes'
+}
 
 subprojects {
   apply plugin: 'java'
   apply plugin: 'checkstyle'
-  apply plugin: 'idea'
 
   repositories {
     jcenter()
